# BMCanvas

./: index.html  package-lock.json  package.json  prd.txt
docs/superpowers/plans/: 2026-06-12-modcanvas-mvp.md  2026-06-12-modcanvas-production-sub1.md  2026-06-12-modcanvas-v2-redesign.md
docs/superpowers/specs/: 2026-06-12-modcanvas-mvp-design.md  2026-06-12-modcanvas-production-sub1.md  2026-06-12-modcanvas-v2-redesign.md
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: export.rs  mod.rs  mods.rs  project.rs  search.rs
src-tauri/src/db/: migrations.rs  mod.rs
src-tauri/src/export/: curseforge_pack.rs  mod.rs  modrinth_pack.rs  prism.rs  zip_export.rs
src-tauri/src/modrinth/: client.rs  types.rs
src/components/common/: ErrorBoundary.tsx  ToastContainer.tsx
src/components/diagnostics/: DiagnosticsPanel.tsx
src/components/export/: ExportDialog.tsx
src/components/graph/: ContextMenu.tsx  DependencyEdge.tsx  GraphCanvas.tsx  GraphControls.tsx  ModNode.tsx
src/components/layout/: AppShell.tsx  Canvas.tsx  Inspector.tsx  ModListPanel.tsx  Sidebar.tsx  StatusBar.tsx
src/components/panels/: DiagnosticsPanel.tsx  ExportDialog.tsx  InspectorPanel.tsx  SearchPanel.tsx
src/engine/: conflictDetector.ts  dependencyResolver.ts  graphLayout.ts
src/hooks/: useDiagnostics.ts  useKeyboard.ts  useModrinth.ts
src/i18n/: en.json  index.ts  zh-CN.json
src/lib/: tauri.ts
src/stores/: graphStore.ts  projectStore.ts  toastStore.ts  uiStore.ts
(+13 files in other folders)
